--- a/ToDoApp/templates/register.html
+++ b/ToDoApp/templates/register.html
@@ -6,7 +6,12 @@
             Register
         </div>
         <div class="card-body">
-            <form>
+            {% if msg %}
+            <div class="alert alert-danger" role="alert">
+                {{msg}}
+            </div>
+            {% endif %}
+            <form method="post" action="/auth/register">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label>Email</label>
@@ -14,7 +19,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label>Username</label>
-                        <input type="username" class="form-control" name="username">
+                        <input type="text" class="form-control" name="username">
                     </div>
                 </div>
 
@@ -45,7 +50,7 @@
             </form>
         </div>
         <div class="card-footer text-muted">
-            <a href="#"> Already have an account? </a>
+            <a href="/auth"> Already have an account? </a>
         </div>
     </div>
 </div>
